--- a/app/assets/stylesheets/base/object.scss
+++ b/app/assets/stylesheets/base/object.scss
@@ -79,7 +79,7 @@ label.inline {
 .header-group {
   font-size: 18px;
   padding-bottom: 5px;
-  border-bottom: 1px solid #ccc;
+  border-bottom: 1px solid #eee;
   margin-bottom: 10px;
 }
 
