--- a/app/views/alerts/matched.html.erb
+++ b/app/views/alerts/matched.html.erb
@@ -1,5 +1,10 @@
 <%= page_title "Alert matched" %>
-<%= render 'shared/project_alert', project: @project, project_tab: 2 %>
+
+<%= render 'shared/project_alert',
+            url_tab1: edit_project_path(@project_with_role.project),
+            url_tab2: project_alerts_path(@project_with_role.project),
+            project_tab: 2 %>
+
 
 <h3> Alerts that matched criteria for </h3>
 <p class="color:gray; font-size: 90%;"><%= @date_range.from %>, <%= @date_range.to %></p>
