--- a/app/views/alerts/index.html.erb
+++ b/app/views/alerts/index.html.erb
@@ -1,18 +1,23 @@
 <% content_for(:title) { "Alerts"} %>
 
-<%= render 'shared/project_alert', project: @project, project_tab: 2 %>
+<%= render 'shared/project_alert',
+            url_tab1: edit_project_path(@project_with_role.project),
+            url_tab2: project_alerts_path(@project_with_role.project),
+            project_tab: 2 %>
 
 
 <div class='clearfix' style='margin-top: 15px;' >
 
   <div class='left'>
-    <%= link_custom 'Alert Content', matched_project_alerts_path(@project), class: 'btn btn-default'%>
-    <span> </span>
-    <%= link_custom'New Alert', new_project_alert_path(@project), class: 'btn btn-default' %>
+    <%= link_custom 'Alert Content', matched_project_alerts_path(@project_with_role.project), class: 'btn btn-default'%>
+    <% if @project_with_role.has_admin_role? %>
+      <span> </span>
+      <%= link_custom'New Alert', new_project_alert_path(@project_with_role.project), class: 'btn btn-default' %>
+    <% end %>
   </div>
 
   <div class='right'>
-    <%= render 'shared/search_form', url: project_alerts_path(@project) %>
+    <%= render 'shared/search_form', url: project_alerts_path(@project_with_role.project) %>
   </div>
 </div>
 
@@ -20,28 +25,35 @@
 <table class='table panel'>
   <thead>
     <tr>
-      <td>Name</td>
-      <td>Url</td>
+      <td width='400' >Alert</td>
+      <td>Groups</td>
       <td>Keywords</td>
-      <td class='td-last'>Action</td>
+      <% if @project_with_role.has_admin_role? %>
+        <td class='td-last'>Action</td>
+      <% end %>
     </tr>
   </thead>
 
   <tbody>
-    <% @project.alerts.each do |alert| %>
+    <% @project_with_role.project.alerts.each do |alert| %>
       <tr>
         <td>
-          <%= link_to alert.name, edit_project_alert_path(@project, alert) %>
+          <%= link_to alert.name, edit_project_alert_path(@project_with_role.project, alert) %>
+          <div><%= alert.url %></div>
           <p class="sub-text">
             <span>Sms alert </span> (<%= alert_time(alert) %>)
           </p>
         </td>
-        <td><%= alert.url %></td>
-        <td><%= truncate(alert.keywords.map(&:name).join(","), length: 120) %></td>
+        <td><%= truncate(alert.groups.map(&:name).join(", "), length: 120) %></td>
+        <td><%= truncate(alert.keywords.map(&:name).join(", "), length: 120) %></td>
+        <% if @project_with_role.has_admin_role? %>
         <td>
-           <%= link_edit " ", edit_project_alert_path(@project, alert) %>
-           <%= link_destroy " ", project_alert_path(@project, alert), method: :delete, data: { confirm: 'Are you sure to delete this alert ?' } %>
+           <%= link_edit " ", edit_project_alert_path(@project_with_role.project, alert) %>
+           <%= link_destroy " ", project_alert_path(@project_with_role.project, alert),
+                            method: :delete,
+                            data: { confirm: 'Are you sure to delete this alert ?'} %>
         </td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
