--- a/app/views/alert_groups/_groups.html.erb
+++ b/app/views/alert_groups/_groups.html.erb
@@ -4,7 +4,9 @@
       <tr>
         <td>Name</td>
         <td>Description</td>
+        <% if admin %>
         <td class='td-last'>Action</td>
+        <% end %>
       </tr>
     </thead>
 
@@ -13,8 +15,10 @@
         <tr id='alert-group-<%=alert_group.id%>'>
           <td><%= alert_group.group.name %></td>
           <td><%= truncate(alert_group.group.description) %></td>
+          <% if admin %>
           <td><%= link_destroy ' ', alert_alert_group_path(alert, alert_group),
                           class: 'remove-alert-group', data: {id: alert_group.id } %></td>
+          <% end %>
         </tr>
       <% end %>
     </tbody>
