--- a/app/views/memberships/_members.html.erb
+++ b/app/views/memberships/_members.html.erb
@@ -1,22 +1,25 @@
-
-<% if group.memberships.size > 0 %>
+<% if group_with_role.object.memberships.size > 0 %>
   <table class='table panel'>
     <thead>
       <tr>
         <td>Full Name</td>
         <td>Email</td>
         <td>Phone</td>
-        <td class='td-last'> Action </td>
+        <% if group_with_role.has_admin_role? %>
+          <td class='td-last'> Action </td>
+        <% end %>
       </tr>
     </thead>
 
     <tbody>
-      <% group.memberships.each do |membership| %>
+      <% group_with_role.object.memberships.each do |membership| %>
         <tr id='membership-<%=membership.id%>'>
           <td><%= membership.member.full_name %></td>
           <td><%= membership.member.email %></td>
           <td><%= membership.member.phone %></td>
-          <td><%= link_destroy ' ', membership_path(membership.id), class: 'remove-member', data: {id: membership.id} %></td>
+          <% if group_with_role.has_admin_role? %>
+            <td><%= link_destroy ' ', membership_path(membership.id), class: 'remove-member', data: {id: membership.id} %></td>
+          <% end %>
         </tr>
       <% end %>
     </tbody>
