--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -5,4 +5,4 @@
            url_tab1: new_project_path,
            url_tab2: 'javascript:void(0)'
             %>
-<%=render 'form', project_with_role: ProjectWithRole.new(@project) %>
+<%=render 'form', project_with_role: @project_with_role %>
