--- a/app/views/alerts/matched.html.erb
+++ b/app/views/alerts/matched.html.erb
@@ -1,8 +1,8 @@
 <%= page_title "Alert matched" %>
 
 <%= render 'shared/project_alert',
-            url_tab1: edit_project_path(@project_with_role.project),
-            url_tab2: project_alerts_path(@project_with_role.project),
+            url_tab1: edit_project_path(@project_with_role.object),
+            url_tab2: project_alerts_path(@project_with_role.object),
             project_tab: 2 %>
 
 
