--- a/app/views/alerts/new.html.erb
+++ b/app/views/alerts/new.html.erb
@@ -1,10 +1,10 @@
 <% content_for(:title) { "Create Alert"} %>
 <%= render 'shared/project_alert',
-            url_tab1: edit_project_path(@project_with_role.project),
-            url_tab2: project_alerts_path(@project_with_role.project),
+            url_tab1: edit_project_path(@project_with_role.object),
+            url_tab2: project_alerts_path(@project_with_role.object),
             project_tab: 2 %>
 
 
 
 <h4> Create new Alert </h4>
-<%= render'form', project: @project_with_role.project, alert: @alert %>
+<%= render'form', project_with_role: @project_with_role, alert: @alert %>
