--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -1,15 +1,19 @@
-<%=simple_form_for(@group, html: { class: 'form-inline form'}) do |f| %>
-  <%= errors_for @group %>
+<%=simple_form_for(group_with_role.object, html: { class: 'form-inline form'}) do |f| %>
+  <% disabled = group_with_role.has_admin_role? ? {} : {disabled: 'disabled'} %>
   <div class='input-row'>
-    <%=f.input :name, input_html: {class: 'form-control'} %>
+    <%=f.input :name, input_html: {class: 'form-control'}.merge(disabled) %>
   </div>
 
   <div class='input-row'>
-    <%=f.input :description, input_html: {class: 'form-control'} %>
+    <%=f.input :description, input_html: {class: 'form-control'}.merge(disabled) %>
   </div>
-  
-  <div class='form-group form-action-group'>
-    <label></label>
-    <%=f.submit 'Save', label: false, class: 'btn btn-primary btn-app' %>
-  </div>
+
+
+  <% if group_with_role.has_admin_role? %>
+    <div class='form-group form-action-group'>
+      <label></label>
+      <%=f.submit 'Save', label: false, class: 'btn btn-primary btn-app' %>
+    </div>
+  <% end %>
+
 <% end %>
