--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -2,7 +2,7 @@
 
 <%= render 'shared/project_alert',
            project_tab: 1,
-           url_tab1: edit_project_url(@project_with_role.project),
-           url_tab2: project_alerts_path(@project_with_role.project)
+           url_tab1: edit_project_url(@project_with_role.object),
+           url_tab2: project_alerts_path(@project_with_role.object)
             %>
 <%= render 'form', project_with_role: @project_with_role %>
