--- a/app/views/layouts/_nav_menu.html.erb
+++ b/app/views/layouts/_nav_menu.html.erb
@@ -20,7 +20,7 @@
                 <%= link_to "Profile", profile_users_path, role: 'menuitem' %>
                </li>
               <li role="presentation">
-                <%= link_to "Change Password", profile_users_path, role: 'menuitem' %>
+                <%= link_to "Change Password", password_users_path, role: 'menuitem' %>
               </li>
             </ul>
 
