--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,18 +1,12 @@
-<%= simple_form_for :user, { url: change_profile_users_path, method: :put, html: { class: 'form-inline form'} } do |f| %>
+<%= simple_form_for @user, { url: update_profile_users_path, method: :put, html: { class: 'form-inline form'} } do |f| %>
 
-  <%=f.input :old_password, required: true, label: 'Old Password', 
-             input_html: {class: 'form-control', value: @old_password, autocomplete: :off } %>
-
-  <%=f.input :password, required: true,
-             input_html: {class: 'form-control', value: @password, autocomplete: :off } %>
-
-  <%=f.input :password_confirmation, required: true, label: 'Confirm',
-             input_html: {class: 'form-control', value: @password_confirmation, autocomplete: :off } %>
-
+  <%=f.input :full_name, required: true, input_html: {class: 'form-control'} %>
+  <%=f.input :email, required: true, input_html: {class: 'form-control'} %>
+  <%=f.input :phone, required: true, label: 'Number', input_html: {class: 'form-control'} %>
 
   <div class='form-group form-action-group'>
     <label class='control-label'></label>
-    <%=f.submit 'Change Password', class: 'btn btn-primary btn-app' %>
+    <%=f.submit 'Save', class: 'btn btn-primary btn-app' %>
   </div>
 
 <% end %>
