--- a/app/views/alert_mailer/notify_matched.html.erb
+++ b/app/views/alert_mailer/notify_matched.html.erb
@@ -17,11 +17,12 @@
   <% feed_entry_highlight = FeedEntryHighlight.new(search_highlight) %>
   <p>
     <h4 class='feed-title'> 
-      <%= link_to feed_entry_highlight.title.html_safe, alert_feed_entry_url(@alert, feed_entry_highlight.id) %>
+      <%= link_to feed_entry_highlight.title.html_safe, feed_entry_highlight.url %>
     </h4>
     <p style='color:gray; font-size: 90%; font-style:italic;'>
       <%= feed_entry_highlight.keywords %>
-      <%= link_to 'Original Source', feed_entry_highlight.url %>
+      <%= link_to "Original source", feed_entry_highlight.url %> |
+      <%= link_to "View on #{ENV['APP_NAME']}", alert_feed_entry_url(@alert, feed_entry_highlight.id) %>
     </p>
     
     <%= feed_entry_highlight.description.html_safe %>
