--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -32,6 +32,7 @@
 </table>
 <%= paginate_for(@groups) %>
 
+
 <br />
 <h3 class='header-title'> Shared Projects </h3>
 
@@ -54,3 +55,4 @@
 </table>
 <%= paginate_for(@group_permissions) %>
 
+<%= render 'shared/content_url_modal' %>
