--- a/app/views/groups/_group.html.erb
+++ b/app/views/groups/_group.html.erb
@@ -2,10 +2,13 @@
 <tr>
   <td><%= link_to group_with_role.object.name, edit_group_path(group_with_role.object) %></td>
   <td><%= truncate(group_with_role.object.description, length: 45) %></td>
+
   <td align="center">
-    <%= link_to "View", alerts_group_path(group_with_role.object.id), class:'', data: {id: group_with_role.object.id} %>
+    <%= link_to "View", alerts_group_path(group_with_role.object.id), class:'content-url', data: {id: group_with_role.object.id} %>
   </td>
+
   <td><%= truncate(group_with_role.object.members.map(&:full_name).join(", "), length: 45) %></td>
+
   <td>
      <% if group_with_role.has_admin_role? %>
        <%= link_edit " ", edit_group_path(group_with_role.object) %>
