channels link to nuntium

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,10 +9,12 @@
 @import "base/object";
 
 @import "bootstrap-timepicker";
+@import "bootstrap-switch";
 @import "bootstrap-timepicker-responsive";
 
 @import "shared/nav_menu";
 @import "shared/time_picker";
 
 @import "sign_in/layout";
+@import "channel/form";
 @import "application/layout";
