--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -7,7 +7,7 @@
   <%=f.input :email, input_html: {class: 'form-control'}, wrapper_html: { class: 'inline'} %>
   <%=f.input :email_alert, label: 'Email Alert', input_html: {class: 'input-inline'}, wrapper_html: { class: 'cb-block'} %>
 
-  <%=f.input :phone, label: 'Number', input_html: {class: 'form-control'}, wrapper_html: { class: 'inline'} %>
+  <%=f.input :phone, label: 'Phone Number', input_html: {class: 'form-control'}, wrapper_html: { class: 'inline'} %>
   <%=f.input :sms_alert, label: 'SMS Alert', input_html: {class: 'input-inline'}, wrapper_html: { class: 'cb-block'} %>
 
   <div class='form-group form-action-group'>
