--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -19,7 +19,7 @@
     <tr>
       <td>Full Name</td>
       <td>Email</td>
-      <td>Number</td>
+      <td>Phone Number</td>
       <td align="center">Alert by</td>
       <td>Groups</td>
       <td align="center"> Projects & Alerts</td>
