--- a/app/assets/stylesheets/channel/form.css
+++ b/app/assets/stylesheets/channel/form.css
@@ -9,6 +9,10 @@
     display: inline-block !important;
     width: 8em;
   }
+  .field_with_errors {
+    display: inline-block !important;
+    color: red;
+  }
 }
 .setup-flow {
   display: block;
