--- a/app/views/channels/_form.html.erb
+++ b/app/views/channels/_form.html.erb
@@ -11,18 +11,20 @@
       Android Phone SMS Gateway - Basic Setup(Recommended)
     </a>
     <div class="panel-body" style="<%=channel_active(@channel, Channel::SETUP_FLOW_BASIC) %>">
-       <p class="text-gray">
+       <p class="sub-text">
           The android phone sms gateway allow you to use any adroid device as a local gateway for sending and receiving system SMS message Click here for instructions
         </p>
 
         <div class="control-inline" id='channel-name-wrapper'>
           <%= f.label :name %>
           <%= f.text_field :name, class: 'form-control' %>
+          <%= error_for(@channel, :name) %>
         </div>
 
         <div class="control-inline">
           <%= f.label :ticket_code, 'Key' %>
           <%= f.text_field :ticket_code, class: 'form-control'%>
+          <%= error_for(@channel, :ticket_code) %>
         </div>
         <br />
         <%= yield(:save_button) %>
@@ -34,22 +36,24 @@
 <%=form_for @channel, class: 'form form-horizontal' do |f| %>
   <div class="panel panel-default">
     <a href='' class="panel-heading setup-flow">
-      Android Phone SMS Gateway -Advanced Setup
+      Android Phone SMS Gateway - Advanced Setup
     </a>
 
     <div class="panel-body" style="<%=channel_active(@channel, Channel::SETUP_FLOW_ADVANCED) %>">
-      <p class="text-gray">
+      <p class="sub-text">
        The android phone sms gateway allow you to use any adroid device as a local gateway for sending and receiving system SMS message Click here for instructions
       </p>
 
       <div class="control-inline" id='channel-name-wrapper'>
         <%= f.label :name %>
         <%= f.text_field :name, class: 'form-control' %>
+        <%= error_for(@channel, :name) %>
       </div>
 
       <div class="control-inline">
         <%= f.label :password, 'Password' %>
         <%= f.password_field :password, class: 'form-control' %>
+        <%= error_for(@channel, :password) %>
       </div>
       <br />
       <%= yield(:save_button) %>
@@ -65,7 +69,7 @@
       Android Phone SMS Gateway - Advanced SetupNational Gateway(Only Some Country Supported)
     </a>
     <div class="panel-body" style="<%=channel_active(@channel, Channel::SETUP_FLOW_GLOBAL)%>">
-      <p class="text-gray">
+      <p class="sub-text">
        In a limited number of countries we have a gateway provided by a local phone company that can be used to send and recieve system messages. Please select the list below to
       </p>
 
