--- a/app/views/channels/index.html.erb
+++ b/app/views/channels/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for(:title) { "Channels"} %>
-<h3 class='header-title'> Channels </h3>
+<h3 class='header-title'> My Channels </h3>
 
 <div class='clearfix'>
   <div class='left'>
