use channel from alert to send sms

--- a/app/views/alerts/index.html.erb
+++ b/app/views/alerts/index.html.erb
@@ -43,7 +43,7 @@
           <% if alert.channel %>
           <p class="sub-text">
             <span>Sms alert </span> <%= alert_time(alert) %>
-              using channel <b> <%= alert.channel.name %></b>
+              using channel <b> <%= alert.channel.nuntium_channel_name %></b>
           </p>
           <% end %>
         </td>
