--- a/app/assets/stylesheets/base/object.scss
+++ b/app/assets/stylesheets/base/object.scss
@@ -19,7 +19,7 @@ label.required abbr{
 }
 
 form {
-  max-width: 600px;
+  max-width: 800px;
   label {
     font-weight: 500
   }
@@ -137,10 +137,14 @@ em.highlight {
   padding: 5px 10px;
   @include border-radius(3px);
   .bs-callout-danger {
-    color: red;
+    .glyphicon {
+      color: red;
+    }
   }
   .bs-callout-info {
-    color: green;
+    .glyphicon {
+      color: green;
+    }
   }
 
   .bs-callout {
