--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,7 +1,7 @@
 <% content_for(:title) { "Groups"} %>
-
 <%= render "shared/group_recipient_tab", group_recipient_tab_index: 1 %>
-<br />
+
+<h3 class='header-title'> My Groups </h3>
 
 <div class='clearfix'>
   <div class='left'>
@@ -34,7 +34,7 @@
 
 
 <br />
-<h3 class='header-title'> Shared Projects </h3>
+<h3 class='header-title'> Shared Groups</h3>
 
 <table class='table panel'>
   <thead>
