--- a/app/views/permissions/index.html.erb
+++ b/app/views/permissions/index.html.erb
@@ -13,7 +13,7 @@
     <tr>
       <td class="permission-first"> User > Projects > Channels</td>
       <td class="role-type"> None </td>
-      <td class="role-type"> Normal </td>
+      <td class="role-type"> Read </td>
       <td class="role-type"> Admin </td>
       <td> </td>
     </tr>
