add link to sign in page in register account

--- a/app/views/registrations/_form.html.erb
+++ b/app/views/registrations/_form.html.erb
@@ -23,7 +23,8 @@
   </div>
 
   <div class='input-row' style='text-align:right ;'>
-    <div class='right'>
+    <div class="pull-left" style="padding-top: 10px;"> Already have an account? <b><%=link_to "Sign in", sign_in_path %></b> </div>
+    <div class='pull-right'>
       <%= button_tag "Sign Up", class: 'btn btn-primary btn-app' %>
     </div>
   </div>
