--- a/app/views/passwords/new.html.erb
+++ b/app/views/passwords/new.html.erb
@@ -1,7 +1,7 @@
 <% content_for(:title) { "Forget Password" } %>
 <h3 class="header-title"> Forget Password </h3>
 <p class="app-desc">
-  Please enter your account <b>email</b>, we will send you an instruction on how to <b>change your password</b> to this email. 
+  Please enter your account's <b>email</b>, we will send you an instruction on how to <b>change your password</b> to the email. 
 </p>
 
 <br />
